<resources>
    <string name="app_name" translatable="false">Coolor</string>

    <string name="nav_menu_Camera">Camera</string>
    <string name="nav_menu_Import">Import</string>
    <string name="nav_menu_Palette">Palette</string>

    <string name="tab_colors">Colors</string>
    <string name="tab_gradients">Gradients</string>

    <string name="request_permission">You need to give camera permission</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="permission_denied">Permission denied, task cancel</string>

    <string name="HEX" translatable="false">HEX:</string>
    <string name="HSV" translatable="false">HSV:</string>
    <string name="RGB" translatable="false">RGB:</string>

    <string name="circle_picker_activity_title">Permission request</string>
    <string name="circle_picker_activity_message">To use this feature, you need to give the permission to draw over all application, do you want to give the permission ?</string>
    <string name="circle_picker_activity_cancel">Cancel</string>
    <string name="circle_picker_activity_yes">Yes</string>
    <!-- Example : #000000 haven been added to the palette-->

    <string name="import_error_file">Error, invalid file extension</string>
    <string name="import_from_pdf">From a PDF</string>
    <string name="import_from_camera">From your camera</string>
    <string name="import_from_files">From your files</string>
    <string name="import_from_url">From url</string>

    <string name="import_pdf_on">on</string>
    <string name="import_pdf_select">Select a pdf file</string>

    <string name="import_files_select">Select an image / a video</string>

    <string name="import_internet_url_text">Copy your url</string>
    <string name="import_internet_unable_to_connect">Unable to connect to this address</string>
    <string name="import_internet_invalid_url">Invalid url address</string>
    <string name="import_internet_basic_error">Error while downloading, please retry</string>

    <string name="ColorSpec_Shades">Shades</string>
    <string name="ColorSpec_Tones">Tones</string>
    <string name="ColorSpec_Tints">Tints</string>
    <string name="ColorSpec_Triadic">Triadic</string>
    <string name="ColorSpec_Complementary">Complementary</string>
    <string name="ColorSpec_Compound">Compound</string>
    <string name="ColorSpec_Analogous">Analogous</string>

    <string name="colors_tab_tuto_title">How to start</string>
    <string name="colors_tab_tuto_circlepicker">Pick the color of any pixel</string>
    <string name="colors_tabs_tuto_import">Import and detect colors</string>
    <string name="colors_tab_tuto_colors">"Store your colors "</string>
    <string name="colors_tab_tuto_gradients">Handle custom gradients</string>
    <string name="colors_tab_pick_from_pixel">Pick from pixels</string>
    <string name="colors_tab_pick_from_wheel">Pick from wheel</string>
    <string name="colors_tab_delete_all_color">Delete all colors</string>
    <string name="colors_tab_add_hexa">Add from Hexadecimal</string>
    <string name="colors_tab_more_gradient">Gradient -</string>
    <string name="colors_tab_more_information">More information</string>
    <string name="colors_tab_more_gradient_create">Create a gradient</string>
    <string name="colors_tab_more_share">Share</string>
    <string name="colors_tab_item_more" translatable="false"><![CDATA[<]]></string>

    <string name="alertdialog_addcolor_add">Add</string>

    <string name="alertdialog_pickwheel_cancel">Dismiss</string>
    <string name="alertdialog_pickwheel_ok">Add</string>

    <string name="alertdialog_gradient_from">From :</string>
    <string name="alertdialog_gradient_toShades">Shades :</string>
    <string name="alertdialog_gradient_toTints">Tints :</string>
    <string name="alertdialog_gradient_add">Add</string>
    <string name="alertdialog_gradient_choose_name">Choose a name</string>
    <string name="alertdialog_gradient_mustchoose_name">You must choose a name</string>
    <string name="alertdialog_gradient_name_alreadytaken">This name is already taken</string>

    <string name="alertdialog_internet_download">Download</string>
    <string name="alertdialog_internet_pause">Pause</string>
    <string name="alertdialog_internet_resume">Resume</string>

    <string name="alertdialog_internet_info_title">You must have a file extension at the end of the url</string>
    <string name="alertdialog_internet_info_desc">Ex : image.com/myimg</string>
    <string name="alertdialog_internet_info_png" translatable="false">.png</string>

    <string name="alertdialog_premium_title">Want to help us ?</string>
    <string name="alertdialog_premium_whyyoushloud">Switching to the premium version will permit us to improve and release new features !</string>
    <string name="alertdialog_premium_title2">As a premium user you could :</string>
    <string name="alertdialog_premium_pdf">Work with pdf files</string>
    <string name="alertdialog_premium_circle">Keep the pixel detector outside the app</string>
    <string name="alertdialog_premium_gradients">Use new gradients</string>
    <string name="alertdialog_premium_ads">Delete ads for ever</string>
    <string name="alertdialog_premium_life">Lifetime</string>

    <string name="camera_before_updating_value" translatable="false">-</string>

    <string name="service_current_hexa">Current hexadecimal value</string>
    <string name="service_waiting_permission">Waiting for permission to be given</string>
    <string name="service_stop">STOP</string>
    <string name="service_share">SHARE</string>
    <string name="service_share_title">Share your color !</string>
    <string name="service_hide">HIDE</string>
    <string name="service_show">SHOW</string>
    <string name="service_you_can_keep_outside">You can keep the circle outside of the app</string>

    <string name="share_self_promo">- Sent from Coolor. An app for android</string>

    <string name="gradients_add">Add gradients</string>
    <string name="gradients_add_default">Add default gradients</string>
    <string name="gradients_tuto_nograd">No gradients detected</string>
    <string name="gradients_tuto1">"After creating your custom gradient, choose a color in the colors tab, and select your gradients. "</string>
    <string name="gradients_native_custom_already_added">All default gradients are already saved </string>
    <string name="gradients_delete_all">Delete all gradients</string>
    <string name="gradients_to_green">To green</string>
    <string name="gradients_to_red">To red</string>
    <string name="gradients_to_blue">To blue</string>
    <string name="gradients_to_orange">To orange</string>
    <string name="gradients_to_cyan">To cyan</string>
    <string name="gradients_to_purple">To purple</string>

    <string name="settings_user_experience">User experience</string>
    <string name="settings_circle">Modify circle picker color size</string>
    <string name="settings_gradient">Edit gradient</string>
    <string name="settings_about">About</string>
    <string name="settings_rate_app">Rate the app</string>
    <string name="settings_contact">Contact the support</string>
    <string name="settings_legacy">Legacy</string>
    <string name="settings_support_intenttitle">Send email</string>
    <string name="settings_support_title">Coloor - Contact</string>

    <string name="support_email" translatable="false">valentinverst.developer@gmail.com</string>
    <string name="settings_support_emailcontent">Here are some anonymous info. You can delete what ever you want but please understand it we will be much more easier to help you if you don\'t delete it</string>
    <string name="settings_gradients_tuto_howto">If you haven\'t created a gradient this is what you should do :</string>

    <string name="keep_circle_outside_app">You can keep the circle outside of the app by upgrading to pro version</string>
    <string name="alertdialog_colorInfo_CopyToClipboard">Copied to clipboard</string>
    <string name="rate_title">Rate this app</string>
    <string name="rate_maintext">If you enjoy Coolor, would you mind taking a moment to rate it ? It won\'t take more than a minute. Thanks for your support !</string>
    <string name="rate_no">No, thanks !</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_yes">Rate Coolor</string>
    <string name="camera_error_unvailable">Camera service is currently unavailable</string>
    <string name="alertdialog_confirmdelete_delete">Delete</string>
    <string name="alertdialog_confirmdelete_mainText">Are you sure you want to delete this ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="colors_tab_save_to_file">Save colors to a file</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!--Replace by app name-->
</resources>
