<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Theme1_DefaultBackground">

    <TextView
        android:id="@+id/sttingTextUX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_user_experience"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sttingImgGradient"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/sttingTextUX"
        app:layout_constraintTop_toBottomOf="@+id/sttingTextUX"
        app:srcCompat="@drawable/gradient_icon" />

    <TextView
        android:id="@+id/sttingTextGradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/settings_gradient"
        android:textColor="@color/Theme1_TextBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/sttingImgGradient"
        app:layout_constraintStart_toEndOf="@+id/sttingImgGradient"
        app:layout_constraintTop_toTopOf="@+id/sttingImgGradient" />

    <View
        android:id="@+id/sttingGradientListener"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="@+id/sttingTextGradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sttingTextGradient" />

    <ImageView
        android:id="@+id/sttingImgCirclePicker"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/sttingTextUX"
        app:layout_constraintTop_toBottomOf="@+id/sttingImgGradient"
        app:srcCompat="@drawable/pipette_icon_icons_com_65005" />

    <TextView
        android:id="@+id/sttingTextCirclePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/settings_circle"
        android:textColor="@color/Theme1_TextBlack"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sttingImgCirclePicker"
        app:layout_constraintStart_toEndOf="@+id/sttingImgCirclePicker"
        app:layout_constraintTop_toTopOf="@+id/sttingImgCirclePicker" />

    <View
        android:id="@+id/settingsCircleListener"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sttingTextCirclePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sttingTextCirclePicker" />

    <TextView
        android:id="@+id/sttingTextAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_about"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sttingImgGradient" />

    <ImageView
        android:id="@+id/sttingImgRate"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:tint="#000000"
        app:layout_constraintStart_toStartOf="@+id/sttingTextAbout"
        app:layout_constraintTop_toBottomOf="@+id/sttingTextAbout"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/sttingTextRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/settings_rate_app"
        android:textColor="@color/Theme1_TextBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/sttingImgRate"
        app:layout_constraintStart_toEndOf="@+id/sttingImgRate"
        app:layout_constraintTop_toTopOf="@+id/sttingImgRate" />

    <View
        android:id="@+id/sttingRateListener"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="@+id/sttingTextRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sttingTextRate" />

    <ImageView
        android:id="@+id/sttingImgSupport"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/sttingTextSupportMail"
        app:layout_constraintStart_toStartOf="@+id/sttingTextAbout"
        app:layout_constraintTop_toTopOf="@+id/sttingTextSupport"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/sttingTextSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_contact"
        android:textColor="@color/Theme1_TextBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/sttingImgSupport"
        app:layout_constraintTop_toBottomOf="@+id/sttingImgRate" />

    <TextView
        android:id="@+id/sttingTextSupportMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_email"
        android:textColor="@color/Theme1_Primary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/sttingTextSupport"
        app:layout_constraintTop_toBottomOf="@+id/sttingTextSupport" />

    <View
        android:id="@+id/sttingContactListener"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="@+id/sttingImgSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sttingImgSupport" />

    <TextView
        android:id="@+id/sttingTextLegacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_legacy"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sttingImgSupport" />

</androidx.constraintlayout.widget.ConstraintLayout>